# AI-ASSISSTED-DOCUMENT-QUERY

./: README.md  app.py  chroma_stats.py  cleaned_packages.txt  db_manager.py  install_system_packages.sh  koyeb.yaml  local.db  mydb.sqlite3  ocr_utils.py  package_install_report_20250718.txt  pyproject.toml  rag_pipeline.py  rebuild_embeddings.py  requirements.txt  simple_embeddings.py  sync_chunks.py  systempackages.txt  vector_store_utils.py
.devcontainer/: Dockerfile  devcontainer.json  requirements-global.txt  system-packages.txt
replit_agent/: architecture.md
