[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.13",
    "altair==5.5.0",
    "chromadb==1.0.12",
    "fastapi==0.115.9",
    "langchain==0.3.25",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-huggingface==0.3.0",
    "langchain-mistralai==0.2.10",
    "langchain-text-splitters==0.3.8",
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "psycopg2-binary==2.9.10",
    "pycryptodome",
    "PyPDF2==3.0.1",
    "pytesseract==0.3.13",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "SQLAlchemy==2.0.41",
    "streamlit==1.45.1",
    "transformers==4.52.4",
]
